1. Enabled EDIT Profile 2. Added a new Password Check API in backend.
